--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "next": "9.5.3",
+    "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-video-js-player": "^1.1.1",
     "styled-components": "latest"
   },
   "devDependencies": {
