--- a/package.json
+++ b/package.json
@@ -5,9 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate": "graphql-codegen"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.4",
+    "@apollo/react-hooks": "^4.0.0",
+    "@graphql-codegen/introspection": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.9",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "graphql": "^15.3.0",
     "next": "9.5.3",
     "next-images": "^1.4.1",
     "react": "16.13.1",
@@ -16,6 +24,10 @@
     "styled-components": "latest"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "latest"
+    "@graphql-codegen/cli": "^1.17.8",
+    "@types/node": "^14.6.4",
+    "@types/react": "^16.9.49",
+    "babel-plugin-styled-components": "latest",
+    "typescript": "^4.0.2"
   }
 }
