--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-markdown": "^4.3.1",
     "react-video-js-player": "^1.1.1",
     "styled-components": "latest",
     "video-react": "^0.14.1"
