--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@graphql-codegen/typescript": "^1.17.9",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "framer-motion": "^2.6.10",
     "graphql": "^15.3.0",
     "next": "9.5.3",
     "next-images": "^1.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-markdown": "^4.3.1",
+    "react-sticky": "^6.0.3",
+    "react-stickynode": "^3.0.3",
+    "react-stikky": "^0.1.30",
     "react-video-js-player": "^1.1.1",
     "styled-components": "latest",
     "video-react": "^0.14.1"
